--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -29,6 +29,22 @@ p {
   clear: both;
 }
 
+input {
+	font-size: 16px;
+	font-weight: 200;
+	font-family: 'source-sans-pro','lato',Arial,sans-serif;
+}
+.input-transparent {
+	border: 0 none;
+	&:focus {
+		outline: none;
+	}
+}
+
+.hidden {
+	display: none;
+}
+
 #main-nav { 
 	border-top: 4px solid $primaryColor;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
@@ -73,5 +89,30 @@ p {
 	}	
 	td {
 		padding: 2px 10px;
+	}
+	.add-entry-row {
+		border-top: 1px solid #ddd;
+		text-align: center;
+		td {
+			padding: 5px;
+		}
+		a {
+			color: #999;
+			text-decoration: underline;
+		}
+	}
+	.entry-form-row {
+		border-top: 1px solid #ddd;
+		text-align: center;
+		td {
+			padding: 2px 10px;
+		}
+		a {
+			color: #999;
+			text-decoration: underline;
+		}
+		input {
+			width: 100%;
+		}
 	}
 }
