--- a/views/partials/tableListing.jade
+++ b/views/partials/tableListing.jade
@@ -6,10 +6,10 @@ ul
 	li
 		a(href="/tables/1") table1
 	li
-		a(href="tables/2") table2
+		a(href="/tables/2") table2
 	li
-		a(href="tables/3") table3
+		a(href="/tables/3") table3
 	li
-		a(href="tables/4") table4
+		a(href="/tables/4") table4
 	
 	li {{'test'}}
