--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -83,9 +83,13 @@ input {
 #data-table {
 	border-collapse: collapse;
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+	width: 800px;
 	thead {
 		border-bottom: 1px solid #ddd;
 		font-weight: 300;
+		td {
+			cursor: pointer;
+		}
 	}	
 	td {
 		padding: 2px 10px;
