--- a/views/partials/table.jade
+++ b/views/partials/table.jade
@@ -2,25 +2,23 @@ h1 Table Page
 
 p This is the table page
 
-p The selected table is {{'table ' + table.tableId}}
+//pre form = {{newEntry | json}}
 
-pre form = {{newEntry | json}}
-
-form#add-entry(ng-submit='addEntry(newEntry)')
+form#add-entry(ng-if='pageStatus == 200', ng-submit='addEntry(newEntry)')
 	table#data-table
 		thead
-			td(ng-click="sortOrder='date'; reverse=!reverse") Date
-			td(ng-click="sortOrder='category'; reverse=!reverse") Category
-			td(ng-click="sortOrder='desc'; reverse=!reverse") Description
-			td(ng-click="sortOrder='userId'; reverse=!reverse") Name
-			td(ng-click="sortOrder='amount'; reverse=!reverse") Amount			
+			th(ng-click="sortOrder='date'; reverse=!reverse") Date
+			th(ng-click="sortOrder='category'; reverse=!reverse") Category
+			th(ng-click="sortOrder='desc'; reverse=!reverse") Description
+			th(ng-click="sortOrder='paidBy'; reverse=!reverse") Name
+			th(ng-click="sortOrder='amount'; reverse=!reverse") Amount			
 		tbody
-			tr(ng-repeat='entry in entries | orderBy:sortOrder:reverse')
+			tr(class='entry-row', ng-repeat='entry in entries | orderBy:sortOrder:reverse')
 				td {{entry.date | date: 'dd/MM/yyyy'}}
 				td {{entry.category}}
 				td {{entry.desc}}
 				td {{entry.paidBy}}
-				td {{entry.amount | currency: '€'}}
+				td(contenteditable='true') {{entry.amount | currency: '€'}}
 			tr.add-entry-row(ng-hide='isEditMode')
 				td(colspan='5')
 					a(href='', ng-click='toggleAddForm()') Click to add
@@ -36,3 +34,19 @@ form#add-entry(ng-submit='addEntry(newEntry)')
 				td
 					input(type='text', class='input-transparent', ng-model='newEntry.amount')
 					input(type='submit', class='hidden')
+			tr.totals-row
+				td
+				td
+				td
+				td
+				td {{totalAmount() | currency: '€'}}
+
+// Table not found
+div(ng-if='pageStatus == 404')
+	h1 Not found
+
+
+// Loading
+div(ng-if="pageStatus == 'loading'", class='bg-loading')
+	img(src='img/min/icon-cloud.png', class='img-loading', width='200', height='200')
+	p Loading...
