--- a/views/partials/tableListing.jade
+++ b/views/partials/tableListing.jade
@@ -2,14 +2,19 @@ h1 Listing Page
 
 p This is the listing page
 
-ul
-	li
-		a(href="/tables/1") table1
-	li
-		a(href="/tables/2") table2
-	li
-		a(href="/tables/3") table3
-	li
-		a(href="/tables/4") table4
-	
-	li {{'test'}}
+ul(ng-if='pageStatus == 200')
+	li(ng-repeat='table in tables')
+		a(href='tables/{{table._id}}')
+			h3 {{table.name}}
+		p {{table.desc}}
+
+
+// Not found
+div(ng-if='pageStatus == 404')
+	h1 Not found
+
+
+// Loading
+div(ng-if="pageStatus == 'loading'", class='bg-loading')
+	img(src='img/min/icon-cloud.png', class='img-loading', width='200', height='200')
+	p Loading...
