--- a/views/partials/tableListing.jade
+++ b/views/partials/tableListing.jade
@@ -2,10 +2,10 @@ h1 Listing Page
 
 p This is the listing page
 
-ul(ng-if='pageStatus == 200')
+ul(ng-if='pageStatus == 200', class='unstyled')
 	li(ng-repeat='table in tables')
-		a(href='tables/{{table._id}}')
-			h3 {{table.name}}
+		a(href='tables/{{table._id}}', class='plain')
+			h3(class='strong') {{table.name}}
 		p {{table.desc}}
 
 
